--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,13 +18,23 @@ spring:
   servlet:
     multipart:
       max-file-size: 10MB
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    listener:
+      simple:
+        acknowledge-mode: auto   # 自动确认
+        concurrency: 1
+
   # 空间图片分表
 mybatis-plus:
   configuration:
     # MyBatis 配置
     map-underscore-to-camel-case: false
     # 仅在开发环境打印日志
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     enable-sql-runner: true
     db-config:
